using StoreManager.Services.Module2;

namespace StoreManager.Services.Module1;

public class Class1A
{
    public Class2B Class2B { get; set; }
}