namespace StoreManager.Services.Module1;

public class Class1B
{
    
}