using StoreManager.Services.Module3;

namespace StoreManager.Services.Module2;

public class Class2A
{
    public Class3B Class3B { get; set; }
}