namespace StoreManager.Services.Module2;

public class Class2B
{
}