using StoreManager.Services.Module1;

namespace StoreManager.Services.Module3;

public class Class3A
{
   // public Class1B Class1B { get; set; }
}