namespace StoreManager.Services.Module3;

public class Class3B
{
}